News UAT/force-app/main/default/objects/Portfolio__c/Portfolio__c.object-meta.xml
<CustomObject>
    <label>Portfolio Team</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Portfolio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>