News UAT/force-app/main/default/objects/Portfolio__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Parent Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Portfolios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>