News UAT/force-app/main/default/objects/Portfolio__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>LEFT(User__r.UserRole.Name, FIND(&#39;-&#39;, User__r.UserRole.Name )-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division</label>
    <type>Text</type>
</CustomField>