News UAT/force-app/main/default/objects/Portfolio__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <formula>User__r.UserRole.Name</formula>
    <label>Portfolio/Role</label>
    <type>Text</type>
</CustomField>