News UAT/force-app/main/default/objects/Portfolio__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <description>Team Roles</description>
    <label>Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Market Manager</fullName>
            </value>
            <value>
                <fullName>Direct Sales Partner</fullName>
            </value>
            <value>
                <fullName>Account Coordinator/Account Executive</fullName>
            </value>
            <value>
                <fullName>Sales Associate</fullName>
            </value>
            <value>
                <fullName>Customer Solutions</fullName>
            </value>
            <value>
                <fullName>Campaigns Execution</fullName>
            </value>
            <value>
                <fullName>Accounts/Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>