News UAT/force-app/main/default/objects/Portfolio__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Portfolio User</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Portfolios</relationshipName>
    <type>Lookup</type>
</CustomField>