News UAT/force-app/main/default/objects/Portfolio__c/fields/User_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Last_Name__c</fullName>
    <description>User Last Name for sort</description>
    <formula>User__r.LastName</formula>
    <label>User Last Name</label>
    <type>Text</type>
</CustomField>