News UAT/force-app/main/default/objects/Portfolio__c/validationRules/Portfolio_Cannot_Modify_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Portfolio_Cannot_Modify_User</fullName>
    <active>true</active>
    <description>Cannot modify User. Instead delete Portfolio Team Member and create new.</description>
    <errorConditionFormula>ISCHANGED( User__c )</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>You cannot change a user on a Portfolio Team. Please delete the entry and create a new one for the change.</errorMessage>
</ValidationRule>